package veiculo;

public enum SituacaoVeiculo {
    DISPONIVEL, ALUGADO, COMPRADO, MANUTENCAO
}

