package veiculo;
public enum TipoVeiculo {
    CARRO, ONIBUS, CAMINHAO
}
