public interface Fichario {
    public abstract void adiciona();
    public abstract void remove();
    public abstract void consulta();
    public abstract void relatorio();
    public abstract Object buscaIDENT(int id);
}
